--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "editor.wordWrap": "wordWrapColumn"
+    "editor.wordWrap": "wordWrapColumn",
+    "latex-workshop.view.pdf.color.dark.backgroundColor": "",
+    "latex-workshop.view.pdf.color.light.backgroundColor":  "",
+
 }
